Fix off-center message input box in Firefox
This fixes #10.

--- a/undead-discord.css
+++ b/undead-discord.css
@@ -256,6 +256,11 @@
   height: unset !important;
 }
 
+/* Fix non-centered text input box */
+.textArea-20yzAH[style*="height: auto"] {
+  height: 0px !important;
+}
+
 .keybind-shortcut span {
   padding-top: 4px !important;
 }
